Alignment fixes

--- a/public/app/sass/_modal.scss
+++ b/public/app/sass/_modal.scss
@@ -14,7 +14,7 @@ $background-color: #f5deb3;
 
 .modal-button {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   margin-top: 10px;
 }
 
